Fixed Alignments

--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -2,7 +2,7 @@ body {
   /* display: flex; */
   /* display: flex; */
   flex-direction: row;
-  height: 100vh;
+  height: 100vh !important;
   width: 100%;
   margin: 0px;
 
@@ -18,7 +18,7 @@ body {
 .overlay {
   position: absolute;
   width: 100%;
-  height: 101vh;
+  height: 135vh;
   margin: 0px;
   padding: 0;
   z-index: -1;
